# okpalette

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.docs/: 1_0_stabilization_audit.md  performance.md
.github/workflows/: ci.yml  release.yml
benches/: generate.rs
docs/: position_aware_label_color_mapping.md
examples/: okpalette_grid_logo.py  okpalette_word_scatter.py
python/glasbey_rs/: __init__.py  _core.pyi  _format.py  _plot.py  _types.py
python/okpalette/: __init__.py  _cli.py  _core.pyi  _format.py  _label.py  _plot.py  _types.py  skill_installer.py
python/okpalette/skills/okpalette/: SKILL.md
src/: algorithm.rs  candidates.rs  color.rs  error.rs  label.rs  lib.rs  parse.rs  render.rs  test_support.rs
src/label/: assignment.rs  graph.rs  sampling.rs
tests/: conftest.py  test_api.py  test_cli.py  test_colorblind.py  test_constraints.py  test_determinism.py  test_formats.py  test_label_palette.py  test_plot.py  test_plot_smoke.py  test_plotting_compat.py  test_python_api.py  test_regressions.py  test_skill_installer.py
