[package]
name = "okpalette"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Fast, dependency-free OKLab categorical color palettes powered by Rust"
readme = "README.md"
repository = "https://github.com/pmbaumgartner/okpalette"
homepage = "https://github.com/pmbaumgartner/okpalette"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use abi3-py312 so one wheel can support Python 3.12+ where PyO3 APIs allow it.
kiddo = { version = "5.3.1", default-features = false }
pyo3 = { version = "0.28.3", features = ["abi3-py312"] }
png = "0.18"
rayon = "1.12"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "generate"
harness = false
