[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "okpalette"
version = "0.1.0"
description = "Fast, dependency-free OKLab categorical color palettes powered by Rust"
requires-python = ">=3.9"
license = "MIT"
keywords = ["color", "palette", "glasbey", "categorical", "oklab", "visualization"]
dependencies = []

[project.optional-dependencies]
dev = [
  "hypothesis>=6",
  "maturin>=1.9,<2",
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.11",
  "ty>=0.0.37",
]

[tool.maturin]
python-source = "python"
module-name = "okpalette._core"
bindings = "pyo3"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "plot_smoke: opt-in palette preview smoke tests that write review images",
]
