[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "okpalette"
version = "0.1.0"
description = "Fast, dependency-free OKLab categorical color palettes powered by Rust"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["color", "palette", "glasbey", "categorical", "oklab", "visualization"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pmbaumgartner/okpalette"
Repository = "https://github.com/pmbaumgartner/okpalette"
Issues = "https://github.com/pmbaumgartner/okpalette/issues"

[project.optional-dependencies]
dev = [
  "hypothesis>=6",
  "maturin>=1.9,<2",
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.11",
  "ty>=0.0.37",
]

[tool.maturin]
python-source = "python"
module-name = "okpalette._core"
bindings = "pyo3"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "plot_smoke: opt-in palette preview smoke tests that write review images",
]
